--- a/backend/package.json
+++ b/backend/package.json
@@ -1,22 +1,30 @@
 {
-  "name": "backend",
+  "name": "bharat-explorer-backend",
   "version": "1.0.0",
-  "description": "",
+  "description": "Backend API for Bharat Explorer project",
   "main": "server.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
     "bcryptjs": "^3.0.3",
     "cors": "^2.8.5",
-    "dotenv": "^17.2.3",
-    "express": "^5.1.0",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.19.3",
-    "nodemailer": "^7.0.10"
-  }
+    "mongoose": "^8.0.3"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/arvind0019/bharat-explorer.git"
+  },
+  "keywords": [],
+  "author": "Arvind Singh",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/arvind0019/bharat-explorer/issues"
+  },
+  "homepage": "https://github.com/arvind0019/bharat-explorer#readme"
 }
